--- a/IIT/package.json
+++ b/IIT/package.json
@@ -15,10 +15,12 @@
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.312.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "puppeteer": "^21.7.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
