--- a/server/iit/package.json
+++ b/server/iit/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mongoose": "^5.13.22",
     "next": "^14.1.0",
+    "node-cron": "^3.0.3",
     "puppeteer": "^21.7.0"
   }
 }
